# Klient-server

./: CMakeLists.txt  client.cpp  client.h  client.ui  main.cpp  server.cpp  server.h
